--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -1,11 +1,12 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Karla:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/reset.css">
+<!-- <link rel="stylesheet" href="/css/normalize.css"> -->
 <link rel="stylesheet" href="/css/style.css">
-<title>accueil</title>
-<script defer src="/js/index.js"></script>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<script defer src="/js/kanban.js"></script>
+<script defer src="/js/widgets/notes.js"></script>
+<script defer src="/js/widgets/rdv.js"></script>
+<script defer src="/js/widgets/favoris.js"></script>
+<script defer src="/js/widgets/horloge.js"></script>
+<title>Accueil</title>
