--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -5,8 +5,8 @@
         
         <nav role="navigation" class="nav">
             <ul class="nav__ul">
-                <li class="nav__ul__liste"><a href="">Accueil</a></li>
+                <li class="nav__ul__liste"><a href="/">Accueil</a></li>
                 <li class="nav__ul__image"><img class="header__image" src="./img/Logo_minimaliste.svg" alt="logo julien"></li>
-                <li class="nav__ul__liste"><a href="">Mon kanban</a></li>
+                <li class="nav__ul__liste"><a href="/kanban">Mon kanban</a></li>
             </ul>
         </nav>
