--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -2,11 +2,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="/css/normalize.css">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/index.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <script defer src="/js/kanban.js"></script>
 <script defer src="/js/widgets/notes.js"></script>
 <script defer src="/js/widgets/rdv.js"></script>
 <script defer src="/js/widgets/favoris.js"></script>
 <script defer src="/js/widgets/horloge.js"></script>
+<script defer src="/js/widgets/connexionInscription.js"></script>
 <title>Accueil</title>
