--- a/app/views/kanban.ejs
+++ b/app/views/kanban.ejs
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <header>
+    <header role="banner" class="header">
         <%- include("partials/header") %>
     </header>
 
