--- a/app/views/modules/google.ejs
+++ b/app/views/modules/google.ejs
@@ -1,3 +1,4 @@
 <script async src="https://cse.google.com/cse.js?cx=45c330ac27bae4b02"></script>
-
-<div class="gcse-searchbox-only"></div>
+<div class="google">
+    <div class="gcse-searchbox-only"></div>
+</div>
