--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -1,12 +1,30 @@
 <div class="container">
     <script src="https://kit.fontawesome.com/edd4004453.js" crossorigin="anonymous"></script>
 
-    <header role="banner" class="header">
-        
-        <nav role="navigation" class="nav">
-            <ul class="nav__ul">
+    <nav role="navigation" class="nav">
+        <ul class="nav__ul">
+
+
+
+            <!-- si je ne suis pas connecter je cacher le boutton connexion -->
+            <% if (locals.isLogged) { %>
                 <li class="nav__ul__liste"><a href="/">Accueil</a></li>
-                <li class="nav__ul__image"><img class="header__image" src="./img/Logo_minimaliste.svg" alt="logo julien"></li>
+                <li class="nav__ul__image"><img class="header__image" src="./img/Logo_minimaliste.svg"
+                        alt="logo julien"></li>
+
                 <li class="nav__ul__liste"><a href="/kanban">Mon kanban</a></li>
-            </ul>
-        </nav>
+                <li class="nav__ul__liste"><a href="/disconnect" class="btn">Déconnexion</a></li>
+
+                <% } else {%>
+                    <!-- si je suis sur la page /inscription j'affiche connexion -->
+
+                    <li class="nav__ul__liste"><a href="/inscription" class="btn">Inscription</a></li>
+                    <li class="nav__ul__image"><img class="header__image" src="./img/Logo_minimaliste.svg"
+                            alt="logo julien"></li>
+                    <li class="nav__ul__liste"><a href="/" class="btn">Connexion</a></li>
+                    <% } %>
+
+
+        </ul>
+
+    </nav>
