--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,6 @@ body {
   background-image: url(../img/background.jpg);
   background-size: 100%;
   font-family: "Roboto", sans-serif;
-  position: fixed;
 }
 
 footer {
@@ -15,7 +14,7 @@ footer {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #ffffff;
   padding: 1rem;
 }
 
@@ -32,6 +31,10 @@ a:hover {
   padding-bottom: 1rem;
 }
 
+.nav {
+  display: flex;
+  flex-direction: row;
+}
 .nav__ul {
   display: flex;
   flex-direction: row;
@@ -53,9 +56,86 @@ a:hover {
   width: 4rem;
 }
 
-.container {
+.connexion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-top: 10rem;
+}
+.connexion fieldset {
+  display: flex;
+  gap: 5rem;
+  padding-bottom: 1.5rem;
+}
+.connexion legend {
+  font-weight: bold;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.74);
+  border-radius: 5px;
+  font-size: 1.5rem;
+}
+.connexion label {
+  background-color: rgba(255, 255, 255, 0.74);
+  padding: 1rem;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.connexion__test {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-  padding: 1.5rem;
+.inscription {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+  gap: 1rem;
+  text-align: center;
+}
+.inscription fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  padding-bottom: 1.5rem;
+}
+.inscription legend {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.74);
+  border-radius: 5px;
+}
+.inscription label {
+  background-color: rgba(255, 255, 255, 0.74);
+  padding: 1rem;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.inscription__test {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.inscription__partie1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.inscription__partie2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
 .widgets {
@@ -64,6 +144,10 @@ a:hover {
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
+}
+
+.google {
+  padding: 1rem;
 }
 
 .title {
@@ -722,6 +806,4 @@ fieldset {
 .editer:hover {
   background-color: rgba(0, 96, 221, 0.6);
   color: black;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=index.css.map */
