--- a/scss/_balise.scss
+++ b/scss/_balise.scss
@@ -2,10 +2,11 @@
 
 body{
 
-    background-image: url(../images/background.jpg);
+    background-image: url(../img/background.jpg);
     background-size: 100%;
     font-family: var.$font;
-    position: fixed;
+
+    
 }
 
 footer{
@@ -18,7 +19,7 @@ footer{
 a {
 
     text-decoration: none;
-    color: black;
+    color: var.$white;
     padding: 1rem;
 
 }
