--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,9 +1,105 @@
 @use './var';
 
-.container{
 
-    padding: 1.5rem;
+.connexion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 10rem;
+
+    & fieldset {
+        display: flex;
+        gap: 5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    & legend{
+        font-weight: bold;
+        margin-bottom: 2rem;
+        padding: 1rem;
+        background-color: rgba(255, 255, 255, 0.74);
+        border-radius: 5px;
+        font-size: 1.5rem;
+    }
+
+    & label{
+        background-color: rgba(255, 255, 255, 0.74);
+        padding: 1rem;
+        border-radius: 5px;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+
+    &__test{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+   
+
+    }
+
 }
+
+.inscription{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+    gap: 1rem;
+    text-align: center;
+
+    & fieldset {
+        display: flex;
+        flex-direction: column;
+        gap: 2.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+    & legend{
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
+        padding: 1rem;
+        background-color: rgba(255, 255, 255, 0.74);
+        border-radius: 5px;
+    }
+
+    & label{
+        background-color: rgba(255, 255, 255, 0.74);
+        padding: 1rem;
+        border-radius: 5px;
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+    &__test{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+   
+
+    }
+
+    &__partie1{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1rem;
+    }
+
+    &__partie2{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1rem;
+    }
+
+}
+
 .widgets{
     display: flex;
     flex-direction: row;
@@ -12,6 +108,13 @@
     gap: 1rem;
 
 }
+
+.google {
+
+    padding: 1rem;
+
+}
+
 .title{
     display: flex;
     justify-content: space-between;
