note, favori, rdv back ok

--- a/app/views/kanban.ejs
+++ b/app/views/kanban.ejs
@@ -19,7 +19,7 @@
             <div class="kanban-heading">
                 <strong class="kanban-heading-text">Kanban</strong>
             </div>
-            <div class="kanban-board">
+            <!-- <div class="kanban-board">
                 <div class="kanban-block" id="todo" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <strong>Liste des tâches</strong>
                     <div class="task-button-block">
@@ -75,7 +75,9 @@
                         <button id="cancel-button" onclick="createTask()">Annuler</button>
                     </span>
                 </div>
-            </div>
+            </div> -->
+
+            <p style="background-color: white; text-align: center; font-size: 5rem;">Bientôt disponible</p>
         </div>
 
 
