--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -126,3 +126,11 @@
 .delete:hover{
     background-color: var.$opacity-annuler;
 }
+
+.deconnexion--li {
+    margin-left: 15rem;
+}
+
+.debut--li {
+    margin-left: 23rem;
+}
