--- a/app/views/partials/connexion.ejs
+++ b/app/views/partials/connexion.ejs
@@ -7,13 +7,14 @@
             <% } %>
                 <fieldset>
                     <legend>Connexion</legend>
-                    
-                        <div class="connexion__test">
-                    <label for="email">Email : </label><input type="email" name="email" id="email">
-                </div>
-                <div class="connexion__test">
-                    <label for="password">Mot de passe : </label><input type="password" name="password" id="password">
-                </div>
+
+                    <div class="connexion__test">
+                        <label for="email">Email : </label><input type="email" name="email" id="email">
+                    </div>
+                    <div class="connexion__test">
+                        <label for="password">Mot de passe : </label><input type="password" name="password"
+                            id="password">
+                    </div>
 
                 </fieldset>
 
