--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,6 +161,14 @@ a:hover {
   background-color: rgba(147, 37, 36, 0.6);
 }
 
+.deconnexion--li {
+  margin-left: 15rem;
+}
+
+.debut--li {
+  margin-left: 23rem;
+}
+
 /* kanban  */
 .kanban-heading {
   display: flex;
@@ -288,7 +296,7 @@ textarea {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.8);
   width: 30%;
   height: 25rem;
   border: solid 1px black;
@@ -420,7 +428,7 @@ fieldset {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.8);
   width: 30%;
   height: 25rem;
   border: solid 1px black;
@@ -433,6 +441,12 @@ fieldset {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+.rdv__encours__th {
+  font-size: 0.9rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 .rdv__nouveau {
   display: flex;
@@ -605,7 +619,7 @@ fieldset {
   display: flex;
   flex-direction: column;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.8);
   width: 30%;
   height: 25rem;
   border: solid 1px black;
