--- a/scss/widgets/_rdv.scss
+++ b/scss/widgets/_rdv.scss
@@ -22,6 +22,13 @@ fieldset{
         align-items: center;
         justify-content: space-between;
 
+        &__th {
+            font-size: 0.9rem;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 1rem;
+        }
+
 
     }
 
@@ -29,7 +36,6 @@ fieldset{
         display: flex;
         flex-direction: row;
         justify-content: center;
-        
         flex-wrap: wrap;
 
         &__title{
