css page accueil

--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -18,10 +18,10 @@
                 <% } else {%>
                     <!-- si je suis sur la page /inscription j'affiche connexion -->
 
-                    <li class="nav__ul__liste"><a href="/inscription" class="btn">Inscription</a></li>
+                    <li class="nav__ul__liste"><a href="/inscription" >Inscription</a></li>
                     <li class="nav__ul__image"><img class="header__image" src="./img/Logo_minimaliste.svg"
                             alt="logo julien"></li>
-                    <li class="nav__ul__liste"><a href="/" class="btn">Connexion</a></li>
+                    <li class="nav__ul__liste"><a href="/" >Connexion</a></li>
                     <% } %>
 
 
