--- a/public/css/index.css
+++ b/public/css/index.css
@@ -26,8 +26,7 @@ a:hover {
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
   padding-bottom: 1rem;
 }
 
@@ -39,6 +38,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 2rem auto;
 }
 .nav__ul__liste {
   padding: 1rem;
@@ -48,7 +48,7 @@ a:hover {
 }
 .nav__ul__liste:hover {
   background-color: #3E4E71;
-  border-radius: 15PX;
+  border-radius: 15px;
 }
 .nav__ul__image {
   padding: 0 5rem;
