--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,8 +3,8 @@
 .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+
     padding-bottom: 1rem;
 
 }
@@ -13,12 +13,14 @@
 .nav {
     display: flex;
     flex-direction: row;
-
+    
 
     &__ul {
         display: flex;
         flex-direction: row;
         align-items: center;     
+        margin: 2rem auto;
+
 
 
         &__liste {
@@ -29,7 +31,7 @@
 
             &:hover {
                 background-color: var.$secondary;
-                border-radius: 15PX;
+                border-radius: 15px;
 
 
             }
