--- a/app/views/modules/favoris.ejs
+++ b/app/views/modules/favoris.ejs
@@ -5,17 +5,21 @@
         <h2>Favoris</h2>
 
         <div>
-            <button class="ajouter" id="btn-favoris">+</button>
+            
             <button class="delete" id="btn-favoris-supprimer">X</button>
         </div>
     </div>
 
     <div class="favoris__liens" id="favori">
+        
         <% for (const favori of favoris) { %>
-           
-            <a class="favoris__liens--card" target="_blank" href="<%= favori.lien %>"><%= favori.titre %><img src="https://www.google.com/s2/favicons?domain=<%= favori.lien %>" alt="Logo <%= favori.titre %>" class="card__image"></a>
-       
-        <% } %>
+
+            <a class="favoris__liens--card" target="_blank" href="<%= favori.lien %>">
+                <%= favori.titre %><img src="https://www.google.com/s2/favicons?domain=<%= favori.lien %>"
+                        alt="Logo <%= favori.titre %>" class="card__image">
+            </a>
+
+            <% } %>
 
     </div>
 
@@ -25,17 +29,17 @@
 
         <div class="modal" role="dialog" aria-labelledby="modalTitle">
             <button class="close-modal modal-trigger" aria-label="favoris">X</button>
-            
+
             <form class="favoriForm" action="" id="favoris-supprimer">
                 <% for (const favori of favoris) { %>
                     <div class="favoriForm__favori">
-                        <input type="checkbox" name="favori" value="<%= favori.id %>" id="<%= favori.id %>">
-                        <label for="<%= favori.id %>"><%= favori.titre %></label>
-             <button class="btn-form delete" id="btn-delete-favori" onclick="handleDelete('<%= favori.id %>', '/delete-favori/', this.parentNode)">Supprimer</button>
-                       
+                        
+                        <span><%= favori.titre %></span><button class="delete" id="btn-delete-favori"
+                            onclick="handleDelete('<%= favori.id %>', '/delete-favori/', this.parentNode)">Supprimer</button>
+
                     </div>
-                <% } %>
-                
+                    <% } %>
+
             </form>
 
         </div>
@@ -51,19 +55,24 @@
             <button class="close-modal modal-trigger" aria-label="favoris">X</button>
 
             <form id="new-favori" class="favoris__nouvelle" action="/ajoutfavori" method="post">
-                <label for="name-lien" class="favoris__nouvelle__title">Titre du lien</label>
-                <input class="favoris__nouvelle__texte" type="text" name="titreLien" id="favori-name"
-                    placeholder="Ajouter un titre ...">
-                <label for="favoris" class="favoris__nouvelle__title">Ajouter un lien</label>
-                <input class="favoris__nouvelle__texte" type="url" name="lien" id="favori-url"
-                    placeholder="Ajouter un lien ...">
+
+                <span class="text-center">Nouveau favori</span>
+
+                <div class="connexion__test">
+                    <input class="favoris__nouvelle__texte" type="text" name="titreLien" id="favori-name" required>
+                    <label for="name-lien" class="favoris__nouvelle__title">Titre du lien</label>
+                </div>
+
+                <div class="connexion__test">
+                    <input class="favoris__nouvelle__texte" type="url" name="lien" id="favori-url" required>
+                    <label for="favoris" class="favoris__nouvelle__title">Ajouter un lien</label>
+                </div>
 
                 <button type="submit" class="btn btn-valider">Ajouter lien aux favoris</button>
-
 
             </form>
 
         </div>
     </div>
-
+    <button class="btn btn-valider" id="btn-favoris">Ajouter un favori</button>
 </div>
