--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -16,7 +16,9 @@ $white : #ffffff;
 
 $font : 'Roboto', sans-serif;
 
+$text : white;
+
 // widget color
 
-$widget : rgba( $white, 0.8 );
+$widget : rgba(0, 0, 0, 0.89);
 
