--- a/app/views/accueil.ejs
+++ b/app/views/accueil.ejs
@@ -49,8 +49,9 @@
         </main>
 
         <footer>
-
+            <% if (locals.isLogged) { %>
             <%- include("partials/footer") %>
+            <% } %>
 
         </footer>
 
