--- a/app/views/modules/note.ejs
+++ b/app/views/modules/note.ejs
@@ -2,11 +2,14 @@
 
 <div class="note">
 
-    <div class="note__write">
+    <div class="note__write" id="note-write">
         <ul class="note__write__ul" id="notes">
             <% for (const note of notes) { %>
-                <li class="note__write__li"><%= note.note %> <button class="delete" onclick="handleDelete('<%= note.id %>', '/delete-note/', this.parentNode)">X</button></li>
-                <% } %>    
+                <li class="note__write__li">
+                    <%= note.note %> <button class="delete"
+                            onclick="handleDelete('<%= note.id %>', '/delete-note/', this.parentNode)">X</button>
+                </li>
+                <% } %>
         </ul>
     </div>
 
@@ -16,19 +19,30 @@
         <div class="overlay modal-trigger"></div>
 
         <div class="modal" role="dialog" aria-labelledby="modalTitle">
-            <button class="close-modal modal-trigger" aria-label="note">X</button>
+            <% if (typeof error !=='undefined' ) { %>
+                <div class="form__error" role="alert">
+                    <%= error %>
+                </div>
+                <% } %>
+                    <button class="close-modal modal-trigger" aria-label="note">X</button>
 
-            <form id="new-note" class="note__nouvelle form-note" action="/ajoutnote" method="POST">
-                <label for="note" class="note__nouvelle__title">Ecrire une nouvelle note</label>
-                <textarea type="text" class="note__nouvelle__texte" name="note" id="note" cols="30" rows="10"
-                    placeholder="Ecrire note ..."></textarea>
-                <button type="submit" class="btn btn-valider" id="btn-add-note">Ajouter note</button>
+                    <form id="new-note" class="note__nouvelle form-note" action="/ajoutnote" method="POST">
 
-            </form>
+                        <span class="text-center">Nouvelle note</span>
+
+                        <div class="connexion__test">
+                            <input type="note" name="note" id="note" required></input>
+                            <label for="note">Ecrire une nouvelle note</label>
+                            
+                        </div>
+                        <div id="compteur-note">0/45</div>
+                        <button type="submit" class="btn btn-valider" id="btn-add-note">Ajouter note</button>
+
+                    </form>
 
         </div>
     </div>
 
-    <button class="btn btn-valider" id="btn-note">Ajouter note</button>
+    <button class="btn btn-valider" id="btn-note">Ajouter une note</button>
 
 </div>
