--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div id="clock">
     <div id="time">
-        <div><span id="hour">00</span><span>Hours</span></div>
+        <div><span id="hour">00</span><span>Heures</span></div>
         <div><span id="minutes">00</span><span>Minutes</span></div>
-        <div><span id="seconds">00</span><span>Seconds</span></div>
+        <div><span id="seconds">00</span><span>Secondes</span></div>
     </div>
 </div>
