--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,7 +9,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10rem;
+  margin-top: 4rem;
 }
 
 a {
@@ -39,15 +39,18 @@ a:hover {
   flex-direction: row;
   align-items: center;
   margin: 2rem auto;
+  padding-inline-start: 0;
 }
 .nav__ul__liste {
   padding: 1rem;
   font-weight: 500;
   font-size: 1.2rem;
   list-style: none;
+  background-color: rgba(0, 0, 0, 0.89);
+  border-radius: 15px;
 }
 .nav__ul__liste:hover {
-  background-color: #3E4E71;
+  background-color: #538b9f;
   border-radius: 15px;
 }
 .nav__ul__image {
@@ -56,38 +59,78 @@ a:hover {
   width: 4rem;
 }
 
+.text-center {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 23px;
+  margin: -50px 0 80px 0;
+  display: block;
+  text-align: center;
+}
+
+.container__connexion {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
 .connexion {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
   align-items: center;
-  margin-top: 10rem;
-}
-.connexion fieldset {
-  display: flex;
-  gap: 5rem;
-  padding-bottom: 1.5rem;
-}
-.connexion legend {
-  font-weight: bold;
-  margin-bottom: 2rem;
-  padding: 1rem;
-  background-color: rgba(255, 255, 255, 0.74);
-  border-radius: 5px;
-  font-size: 1.5rem;
-}
-.connexion label {
-  background-color: rgba(255, 255, 255, 0.74);
-  padding: 1rem;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.89);
+  border-radius: 3px;
+  padding: 70px 100px;
 }
 .connexion__test {
+  position: relative;
+  margin-bottom: 25px;
+}
+.connexion__test label {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: #fff;
+  pointer-event: none;
+  transition: all 0.5s ease-in-out;
+}
+.connexion__test input {
+  border: 0;
+  border-bottom: 1px solid #555;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
+  color: #fff;
+}
+.connexion__test input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #e74c3c;
+}
+.connexion__test input:valid ~ label {
+  top: -12px;
+  font-size: 12px;
+}
+.connexion__test input:focus ~ label {
+  top: -12px;
+  font-size: 12px;
+}
+.connexion__centrage {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.container__inscription {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
 }
 
 .inscription {
@@ -95,47 +138,52 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
-  gap: 1rem;
-  text-align: center;
-}
-.inscription fieldset {
-  display: flex;
-  flex-direction: column;
-  gap: 2.5rem;
-  padding-bottom: 1.5rem;
-}
-.inscription legend {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 2rem;
-  padding: 1rem;
-  background-color: rgba(255, 255, 255, 0.74);
-  border-radius: 5px;
-}
-.inscription label {
-  background-color: rgba(255, 255, 255, 0.74);
-  padding: 1rem;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  font-weight: bold;
+  background-color: rgba(0, 0, 0, 0.89);
+  border-radius: 3px;
+  padding: 70px 100px;
 }
 .inscription__test {
+  position: relative;
+  margin-bottom: 25px;
+}
+.inscription__test label {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  font-size: 16px;
+  color: #fff;
+  pointer-event: none;
+  transition: all 0.5s ease-in-out;
+}
+.inscription__test input {
+  border: 0;
+  border-bottom: 1px solid #555;
+  background: transparent;
+  width: 100%;
+  padding: 8px 0 5px 0;
+  font-size: 16px;
+  color: #fff;
+}
+.inscription__test input:focus {
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #e74c3c;
+}
+.inscription__test input:valid ~ label {
+  top: -12px;
+  font-size: 12px;
+}
+.inscription__test input:focus ~ label {
+  top: -12px;
+  font-size: 12px;
+}
+.inscription__centrage {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-}
-.inscription__partie1 {
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  gap: 1rem;
-}
-.inscription__partie2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 1rem;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .widgets {
@@ -291,25 +339,33 @@ textarea {
   display: none;
 }
 
+#compteur-note {
+  color: red;
+  width: 100%;
+  text-align: center;
+}
+
 .note {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.89);
   width: 30%;
   height: 25rem;
   border: solid 1px black;
   border-radius: 8px;
   padding: 0.5rem;
   box-sizing: border-box;
+  color: white;
 }
 .note__write {
   display: flex;
   flex-direction: column;
   margin-top: 0rem;
   width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .note__write__ul {
   display: flex;
@@ -346,83 +402,18 @@ textarea {
   margin-right: 1rem;
 }
 
-.modal-container {
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  transition: visibility 0.4s;
-  margin: 0;
-  padding: 0;
+#rdv-tbody {
+  overflow: scroll;
 }
 
-.modal-container.active {
-  transition: visibility 0s;
-  visibility: visible;
-}
-
-.overlay {
-  opacity: 0;
-  position: absolute;
+#compteur-nom, #compteur-lieu {
+  color: red;
   width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.8274509804);
-  transition: opacity 0.4s 0.2s ease-out;
+  text-align: center;
 }
 
-.modal-container.active .overlay {
-  opacity: 1;
-  transition: opacity 0.4s ease-out;
-}
-
-.modal {
-  opacity: 0;
-  width: 95%;
-  max-width: 500px;
-  min-width: 300px;
-  padding: 30px;
-  background: #fff;
-  border-radius: 5px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.4s ease-out;
-  transform: 0.4s ease-out;
-}
-
-.modal-container.active .modal {
-  opacity: 1;
-  transition: opacity 0.4s 0.2s ease-out;
-}
-
-.close-modal {
-  padding: 8px 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  background: #ff365e;
-  color: #fff;
-}
-
-.modal h1 {
-  margin-bottom: 10px;
-  font-weight: 500;
-}
-
-.modal p {
-  line-height: 1.4;
-  margin-bottom: 5px;
-}
-
-fieldset {
-  border-style: none;
+.compteur-span-rdv {
+  font-size: 0.8rem;
 }
 
 .rdv {
@@ -430,13 +421,14 @@ fieldset {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.89);
   width: 30%;
   height: 25rem;
   border: solid 1px black;
   border-radius: 8px;
   padding: 0.5rem;
   box-sizing: border-box;
+  color: white;
 }
 .rdv__encours {
   display: flex;
@@ -469,91 +461,13 @@ fieldset {
   width: 50%;
 }
 .rdv__nouveau__input {
-  height: 2rem;
-  border-radius: 5px;
   border: solid 1px black;
   margin-right: 1rem;
-  margin-bottom: 1rem;
 }
 
 .tableaurdv {
   width: 100%;
   text-align: center;
-}
-
-.modal-container {
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  transition: visibility 0.4s;
-  margin: 0;
-  padding: 0;
-}
-
-.modal-container.active {
-  transition: visibility 0s;
-  visibility: visible;
-}
-
-.overlay {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.8274509804);
-  transition: opacity 0.4s 0.2s ease-out;
-}
-
-.modal-container.active .overlay {
-  opacity: 1;
-  transition: opacity 0.4s ease-out;
-}
-
-.modal {
-  opacity: 0;
-  width: 95%;
-  max-width: 500px;
-  min-width: 300px;
-  padding: 30px;
-  background: #fff;
-  border-radius: 5px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.4s ease-out;
-  transform: 0.4s ease-out;
-}
-
-.modal-container.active .modal {
-  opacity: 1;
-  transition: opacity 0.4s 0.2s ease-out;
-}
-
-.close-modal {
-  padding: 8px 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  background: #ff365e;
-  color: #fff;
-}
-
-.modal h1 {
-  margin-bottom: 10px;
-  font-weight: 500;
-}
-
-.modal p {
-  line-height: 1.4;
-  margin-bottom: 5px;
 }
 
 #clock h2 {
@@ -620,8 +534,10 @@ fieldset {
 .favoris {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin-top: 2rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.89);
+  color: white;
   width: 30%;
   height: 25rem;
   border: solid 1px black;
@@ -633,7 +549,10 @@ fieldset {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .favoris__liens--card {
   display: flex;
@@ -642,7 +561,7 @@ fieldset {
   width: 20%;
   box-sizing: border-box;
   font-weight: bold;
-  color: #3E4E71;
+  color: white;
 }
 .favoris__liens--card:hover {
   font-weight: bold;
@@ -662,8 +581,6 @@ fieldset {
   font-weight: bold;
 }
 .favoris__nouvelle__texte {
-  height: 2rem;
-  border-radius: 5px;
   border: solid 1px black;
   width: 70%;
   margin-right: 1rem;
@@ -672,84 +589,17 @@ fieldset {
 .favoriForm__lien {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: start;
   gap: 1rem;
   margin-top: 0.5rem;
 }
-
-.modal-container {
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  transition: visibility 0.4s;
-  margin: 0;
-  padding: 0;
+.favoriForm__favori {
+  display: flex;
+  gap: 1rem;
 }
 
-.modal-container.active {
-  transition: visibility 0s;
-  visibility: visible;
-}
-
-.overlay {
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.8274509804);
-  transition: opacity 0.4s 0.2s ease-out;
-}
-
-.modal-container.active .overlay {
-  opacity: 1;
-  transition: opacity 0.4s ease-out;
-}
-
-.modal {
-  opacity: 0;
-  width: 95%;
-  max-width: 500px;
-  min-width: 300px;
-  padding: 30px;
-  background: #fff;
+.card__image {
+  width: 50%;
   border-radius: 5px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.4s ease-out;
-  transform: 0.4s ease-out;
-}
-
-.modal-container.active .modal {
-  opacity: 1;
-  transition: opacity 0.4s 0.2s ease-out;
-}
-
-.close-modal {
-  padding: 8px 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 18px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
-  background: #ff365e;
-  color: #fff;
-}
-
-.modal h1 {
-  margin-bottom: 10px;
-  font-weight: 500;
-}
-
-.modal p {
-  line-height: 1.4;
-  margin-bottom: 5px;
 }
 
 .btn {
@@ -822,4 +672,106 @@ fieldset {
 .editer:hover {
   background-color: rgba(0, 96, 221, 0.6);
   color: black;
+}
+
+.btn--form {
+  color: #fff;
+  background-color: #e74c3c;
+  outline: none;
+  border: 0;
+  color: #fff;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  margin-top: 50px;
+  border-radius: 2px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.btn--form:hover {
+  background-color: rgba(65, 120, 74, 0.6);
+  color: black;
+}
+
+.modal-container {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  transition: visibility 0.4s;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-container.active {
+  transition: visibility 0s;
+  visibility: visible;
+}
+
+.overlay {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(51, 51, 51, 0.8274509804);
+  transition: opacity 0.4s 0.2s ease-out;
+}
+
+.modal-container.active .overlay {
+  opacity: 1;
+  transition: opacity 0.4s ease-out;
+}
+
+.modal {
+  opacity: 0;
+  width: 95%;
+  max-width: 500px;
+  min-width: 300px;
+  padding: 30px;
+  background: #fff;
+  border-radius: 5px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.4s ease-out;
+  transform: 0.4s ease-out;
+}
+
+.modal-container.active .modal {
+  opacity: 1;
+  transition: opacity 0.4s 0.2s ease-out;
+}
+
+.close-modal {
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  background: #ff365e;
+  color: #fff;
+}
+
+.modal h1 {
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+.modal p {
+  line-height: 1.4;
+  margin-bottom: 5px;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.89);
+  border-radius: 3px;
+  padding: 5rem;
 }/*# sourceMappingURL=index.css.map */
