--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,106 +1,149 @@
 @use './var';
 
+.text-center{
+	color:#fff;	
+	text-transform:uppercase;
+    font-size: 23px;
+    margin: -50px 0 80px 0;
+    display: block;
+    text-align: center;
+}
 
+.container__connexion{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
 .connexion{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     align-items: center;
-    margin-top: 10rem;
+    background-color: rgba(0, 0, 0, 0.89);
+    border-radius: 3px;
+    padding: 70px 100px;
 
-    & fieldset {
-        display: flex;
-        gap: 5rem;
-        padding-bottom: 1.5rem;
+    &__test {
+        position:relative;
+        margin-bottom:25px;
     }
 
-    & legend{
-        font-weight: bold;
-        margin-bottom: 2rem;
-        padding: 1rem;
-        background-color: rgba(255, 255, 255, 0.74);
-        border-radius: 5px;
-        font-size: 1.5rem;
+    &__test label {
+        position:absolute;
+        top:0px;
+        left:0px;
+        font-size:16px;
+        color:#fff;	
+        pointer-event:none;
+        transition: all 0.5s ease-in-out;
     }
 
-    & label{
-        background-color: rgba(255, 255, 255, 0.74);
-        padding: 1rem;
-        border-radius: 5px;
-        font-size: 1.2rem;
-        font-weight: bold;
+    &__test input {
+        border:0;
+        border-bottom:1px solid #555;  
+        background:transparent;
+        width:100%;
+        padding:8px 0 5px 0;
+        font-size:16px;
+        color:#fff;
     }
 
+    &__test input:focus {
+        border:none;	
+        outline:none;
+        border-bottom:1px solid #e74c3c;	
+    }
 
-    &__test{
+    
+    &__test input:valid~label {
+        top: -12px;
+        font-size: 12px;
+    }
+
+    &__test input:focus~label {
+        top: -12px;
+        font-size: 12px;
+    }
+
+    &__centrage {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-   
-
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 1rem;
     }
 
 }
 
-.inscription{
+.container__inscription{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.inscription {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 5rem;
-    gap: 1rem;
-    text-align: center;
+    background-color: rgba(0, 0, 0, 0.89);
+    border-radius: 3px;
+    padding: 70px 100px;
 
-    & fieldset {
+    &__test {
+        position:relative;
+        margin-bottom:25px;
+    }
+
+    &__test label {
+        position:absolute;
+        top:0px;
+        left:0px;
+        font-size:16px;
+        color:#fff;	
+        pointer-event:none;
+        transition: all 0.5s ease-in-out;
+    }
+
+    &__test input {
+        border:0;
+        border-bottom:1px solid #555;  
+        background:transparent;
+        width:100%;
+        padding:8px 0 5px 0;
+        font-size:16px;
+        color:#fff;
+    }
+
+    &__test input:focus {
+        border:none;	
+        outline:none;
+        border-bottom:1px solid #e74c3c;	
+    }
+
+    
+    &__test input:valid~label {
+        top: -12px;
+        font-size: 12px;
+    }
+
+    &__test input:focus~label {
+        top: -12px;
+        font-size: 12px;
+    }
+
+    &__centrage {
         display: flex;
         flex-direction: column;
-        gap: 2.5rem;
-        padding-bottom: 1.5rem;
-    }
-
-    & legend{
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 2rem;
-        padding: 1rem;
-        background-color: rgba(255, 255, 255, 0.74);
-        border-radius: 5px;
-    }
-
-    & label{
-        background-color: rgba(255, 255, 255, 0.74);
-        padding: 1rem;
-        border-radius: 5px;
-        font-size: 1.2rem;
-        font-weight: bold;
-    }
-
-    &__test{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-   
-
-    }
-
-    &__partie1{
-        display: flex;
-        flex-direction: row;
         justify-content: space-between;
-        gap: 1rem;
-    }
-
-    &__partie2{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 1rem;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 1rem;
     }
 
 }
 
-.widgets{
+.widgets {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -115,7 +158,7 @@
 
 }
 
-.title{
+.title {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -123,7 +166,7 @@
 
 }
 
-.delete:hover{
+.delete:hover {
     background-color: var.$opacity-annuler;
 }
 
