--- a/scss/components/_btn.scss
+++ b/scss/components/_btn.scss
@@ -75,3 +75,22 @@
         color: black;
     }
 }
+
+.btn--form{
+    color:#fff;
+	background-color:#e74c3c;
+	outline: none;
+    border: 0;
+    color: #fff;
+	padding:10px 20px;
+	text-transform:uppercase;
+	margin-top:50px;
+	border-radius:2px;
+	cursor:pointer;
+    transition:all 0.3s ease-in-out;
+    &:hover{
+        background-color: var.$opacity-valider;
+        color: black;
+    }
+
+}
