--- a/scss/widgets/_note.scss
+++ b/scss/widgets/_note.scss
@@ -1,5 +1,11 @@
 @use '../var';
 
+#compteur-note {
+    color: red;
+    width: 100%;
+    text-align: center;
+}
+
 .note {
     display: flex;
     flex-direction: column;
@@ -12,13 +18,16 @@
     border-radius: 8px;
     padding: 0.5rem;
     box-sizing: border-box;
+    color: var.$text;
 
     &__write {
         display: flex;
         flex-direction: column;
         margin-top: 0rem;
         width: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
+
 
         &__ul {
             display: flex;
@@ -65,84 +74,3 @@
 
 }
 
-// Modal bloc note
-
-
-.modal-container {
-    // display: none;
-    visibility: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    transition: visibility 0.4s;
-    margin: 0;
-    padding: 0;
-}
-
-.modal-container.active {
-    // display: block;
-    transition: visibility 0s;
-    visibility: visible;
-}
-
-.overlay {
-    opacity: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #333333d3;
-    transition: opacity 0.4s 0.2s ease-out;
-}
-
-.modal-container.active .overlay {
-    opacity: 1;
-    transition: opacity 0.4s ease-out;
-}
-
-.modal {
-    opacity: 0;
-    width: 95%;
-    max-width: 500px;
-    min-width: 300px;
-    padding: 30px;
-    background: #fff;
-    border-radius: 5px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: opacity 0.4s ease-out;
-    transform: 0.4s ease-out;
-}
-
-.modal-container.active .modal {
-    opacity: 1;
-
-    transition: opacity 0.4s 0.2s ease-out;
-
-}
-
-.close-modal {
-    padding: 8px 10px;
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    background: #ff365e;
-    color: #fff;
-}
-
-.modal h1 {
-    margin-bottom: 10px;
-    font-weight: 500;
-}
-
-.modal p {
-    line-height: 1.4;
-    margin-bottom: 5px;
-}
