--- a/app/views/modules/note.ejs
+++ b/app/views/modules/note.ejs
@@ -1,7 +1,9 @@
 <!-- Bloc note -->
 
 <div class="note">
-
+    <div class="title">
+    <h2>Notes</h2>
+</div>
     <div class="note__write" id="note-write">
         <ul class="note__write__ul" id="notes">
             <% for (const note of notes) { %>
