--- a/scss/widgets/_rdv.scss
+++ b/scss/widgets/_rdv.scss
@@ -1,7 +1,9 @@
 @use '../var';
 
 #rdv-tbody{
-    overflow: scroll;
+    overflow-y: scroll;
+    display: block;
+    overflow-x: hidden;
 }
 
 #compteur-nom , #compteur-lieu{
