--- a/app/views/partials/connexion.ejs
+++ b/app/views/partials/connexion.ejs
@@ -2,9 +2,9 @@
     <div class="connexion">
         <form action="/" method="POST">
             <span class="text-center">Connexion</span>
-            <% if (typeof alert !=='undefined' ) { %>
+            <% if (typeof error !=='undefined' ) { %>
                 <div class="form__error" role="alert">
-                    <%= alert %>
+                    <%= error %>
                 </div>
                 <% } %>
 
