--- a/scss/widgets/_favoris.scss
+++ b/scss/widgets/_favoris.scss
@@ -1,5 +1,11 @@
 @use '../var';
 
+#compteur-lien {
+    color: red;
+    width: 100%;
+    text-align: center;
+}
+
 .favoris {
     display: flex;
     flex-direction: column;
